--- a/windowsbin/README
+++ b/windowsbin/README
@@ -1,1 +1,1 @@
-You need to copy over the ../src/data directory next to the .exe otherwise it will have no content!
+Copy over ../src/data to here to get the game to run with content. The windows binary is over here because I don't feel like crowding the source with dll's.
